--- a/src/pages/Hope Tracker/HopeInput.css
+++ b/src/pages/Hope Tracker/HopeInput.css
@@ -1,9 +1,10 @@
-form{
+.HopeInput{
     padding-top: 50px;
     display: grid;
     justify-content: left;
     background-color: rgb(0, 0, 0);
 }
+
 div.card.input{
     margin-left: 0px;
 }
