--- a/src/pages/Hope Tracker/HopeInput.css
+++ b/src/pages/Hope Tracker/HopeInput.css
@@ -1,10 +1,9 @@
-.HopeInput{
+form{
     padding-top: 50px;
     display: grid;
     justify-content: left;
     background-color: rgb(0, 0, 0);
 }
-
 div.card.input{
     margin-left: 0px;
 }
@@ -47,7 +46,7 @@ input{
   .input input {
     font: inherit;
     display: block;
-    width: 100%;
+    width: 10%;
     border: 1px solid #ccc;
     padding: 0.15rem;
     margin-bottom: 0.5rem;
