--- a/frontend/src/pages/Hope Tracker/HopeGPA.css
+++ b/frontend/src/pages/Hope Tracker/HopeGPA.css
@@ -16,3 +16,10 @@
     border: 5px;
     margin-left: -5px;
 }
+
+.class3{
+    border-radius: 5px;
+    padding: 10px;
+    border: 5px;
+    margin-left: -5px;
+}
