--- a/frontend/src/pages/LoggedIn.css
+++ b/frontend/src/pages/LoggedIn.css
@@ -31,5 +31,11 @@
     color: white;
     border: solid;
     border-color: #ba0c2f;
-    border-width: 2px 16px 4px 16px;
+    border-width: 4px 16px 4px 16px;
+    border-radius: 10%;
+}
+
+#logOutButton:hover {
+    background-color: #9e0c29;
+    border-color: #9e0c29;
 }
