--- a/frontend/src/pages/Hope Tracker/HopeButton.css
+++ b/frontend/src/pages/Hope Tracker/HopeButton.css
@@ -7,7 +7,8 @@
     cursor: pointer;
     position: relative;
     left: 77px;
-    border-radius: 5px;
+    border-radius: 20px;
+    margin: 10px;
   }
   
   .button:hover{
